# PFN

./: CHANGELOG.md  LICENSE  Lista1.hs  PFN.cabal  README.md  aula2.hs  aula3.hs  aula5.hs
app/: Main.hs
data/: alice_haskell.txt  small_text.txt
src/: Exercicios0.hs  Lista1.hs  aula2.hs  aula3.hs  aula4.hs  aula5.hs  aula6.hs  aula7.hs
src/Aulas/: Aula10.hs  Aula11.hs  Aula12.hs  Aula13.hs  Aula14.hs  Aula15.hs  Aula16.hs  Aula17.hs  Aula18.hs  Aula19.hs  Aula2.hs  Aula20.hs  Aula21.hs  Aula22.hs  Aula23.hs  Aula24.hs  Aula3.hs  Aula4.hs  Aula5.hs  Aula6.hs  Aula7.hs  Aula8.hs  Aula9.hs  Exercicios0.hs  aula8.hs
src/Listas/: Lista1.hs  Lista2.hs  Lista3.hs  ListaLambda.md  RevisaoLambda.md
src/Modulos/: Biblioteca.hs  Principal.hs
src/Provas/: P1.hs
src/TrabalhoFinal/: TrabalhoFinal.hs
test/: Lista1.hs  Main.hs  TestAula24.hs  TestLista1.hs  TestLista2.hs  TestLista3.hs  TestTrabalhoFinal.hs
