cabal-version:   3.0
name:            PFN
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Otávio Almeida
maintainer:      otavioalmeida650@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md
category:        Code Repository
synopsis:        A repository for the PFN course

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Aulas.Aula10
        Aulas.Aula11
        Aulas.Aula12
        Aulas.Aula13
        Aulas.Aula14
        Aulas.Aula15
        Aulas.Aula16
        Aulas.Aula17
        Aulas.Aula18
        Aulas.Aula19
        Aulas.Aula2
        Aulas.Aula20
        Aulas.Aula21
        Aulas.Aula22
        Aulas.Aula23
        Aulas.Aula3
        Aulas.Aula4
        Aulas.Aula5
        Aulas.Aula6
        Aulas.Aula7
        Aulas.Aula8
        Aulas.Aula9
        Aulas.Exercicios0
        Listas.Lista1
        Listas.Lista2
        Listas.Lista3
        Provas.P1

    build-depends:
        , base        ^>=4.17.0.0
        , hashtables

    hs-source-dirs:   src
    default-language: Haskell2010

executable PFN
    import:           warnings
    main-is:          Main.hs
    build-depends:
        , base  ^>=4.17.0.0
        , PFN

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite PFN-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        TestLista1
        TestLista2
        TestLista3
    build-depends:
        , base  ^>=4.17.0.0
        , PFN
        , hspec
        , hashtables
